[metadata]
name = mrcnn
description = Implementation of Mask R-CNN on Python 3, Keras, and TensorFlow
url = https://github.com/Amouna133/Mask_RCNN_tf_2.x
long_description = file: README.md
long_description_content_type = text/x-rst
classifiers =
    Intended Audience :: Science/Research
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3.9
platforms = Windows

[options]
packages = find:
zip_safe = False
install_requires =
    numpy
    scipy
    Pillow
    cython
    matplotlib
    scikit-image
    tensorflow
    keras
    opencv-python
    h5py
    imgaug
    IPython[all]
setup_requires = setuptools>=42; wheel; setuptools_scm[toml]>=3.4.3
python_requires = >=3.9
use_2to3 = False

[flake8]
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist,
ignore = E203, E266, E501, W503, E731
# line length is intentionally set to 80 here because pyvisa uses Bugbear
# See https://github.com/psf/black/blob/master/README.md#line-length for more details
max-line-length = 80
max-complexity = 18
select = B,C,E,F,W,T4,B9

[mypy]
follow_imports = normal
strict_optional = True

# FIXME Ideally remove once pytest ships typing information
[mypy-pytest.*]
ignore_missing_imports = True

[isort]
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
skip = pyvisa-py/__init__.py
known_third_party = numpy,h5py,typing_extensions,pytest
